@@ -1,0 +1,18 @@
+package com.robertx22.mine_and_slash.mixins;
+
+import com.robertx22.mine_and_slash.mixin_methods.OnScrollHotbar;
+import net.minecraft.entity.player.PlayerInventory;
+import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.injection.At;
+import org.spongepowered.asm.mixin.injection.Inject;
+import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
+
+@Mixin(PlayerInventory.class)
+public class PlayerInventoryMixin {
+
+    @Inject(method = "scrollInHotbar", at = @At(value = "HEAD"), cancellable = true)
+    private void clickSlot(double scrollAmount, CallbackInfo ci) {
+        OnScrollHotbar.clickSlot(scrollAmount, ci);
+    }
+
+}
